CNDE-2057: Post-processing integration for CASE_LAB_DATAMART (#151)